--- a/style.css
+++ b/style.css
@@ -105,17 +105,17 @@ h2 {
 
 /*ESTILIZAÇÃO DOS BOTÕES*/
 .link-container {
-    background-color: #ec0f0f;
-    background-image: radial-gradient(#b10000 0.5px, transparent 0.5px);
+    background-color: #000000;
     background-size: 5px 5px;
     border-radius: 40px;
     /*ALTERA A LARGURA DOS BOTÕES*/
-    width: 200px;
+    width: 250px;
     padding: 8px 12px;
     display: flex;
     align-items: center;
     gap: 8px;
     font-family: 'ChunkFive', serif;
+    font-size: 18px;
     /*DESCOMENTAR CASO USE BORDAS*/
     /*border: 4px solid #f4ee04;*/
 }
